--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,12 @@
 @use 'hero';
+@use 'detail';
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    color: #fff;
 }
 
 .container{
